--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - .env
   - assets/images/
   # - assets/images/darklogo.jpg
   # - assets/images/lightlogo.jpg
